# clawback

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  dast.yml  security.yml
Docs/: ANNOTATION-PRD.md  PRD.md  plan.md
app/: __init__.py  config.py
app/middleware/: auth.py
app/routes/: __init__.py  api.py  health.py  views.py
app/services/: annotation_store.py  session_cache.py  session_parser.py
app/static/: index.html
app/static/css/: style.css
app/static/js/: annotations.js  app.js  parser.js  playback.js  renderer.js  scroller.js  search.js
app/templates/: login.html
scripts/ci/: run-bandit.sh  run-dockle.sh  run-fuzz.sh  run-pip-audit.sh  run-smoke-tests.sh  run-zap.sh
sessions/curated/: creating-clawback-annotations.json  debugging-session.jsonl  demo-session.jsonl  lab-01.jsonl  lab-02.jsonl  lab-03.jsonl  lab-04.jsonl  lab-05a.jsonl  lab-05b-annotations.json  lab-05b.jsonl  manifest.json
tests/fuzz/: conftest.py  test_api_fuzz.py  test_auth_fuzz.py  test_upload_fuzz.py
tests/integration/: conftest.py  test_annotations.py  test_editor.py  test_inner_workings.py  test_playback.py  test_session_loading.py  test_upload.py
tests/integration/fixtures/: integration-annotations.json  integration-session.jsonl
tests/smoke/: test_endpoints.py
tests/unit/: conftest.py  test_annotation_store.py  test_api.py  test_auth.py  test_config.py  test_health.py  test_session_cache.py  test_session_parser.py  test_views.py
(+7 files in other folders)
